--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Centered Button</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
